# qt-example

./: .gitignore  LICENSE  README.md
ex1/: Makefile  README.md
ex1-cmake/: Makefile  README.md
ex1-cmake/src/: CMakeLists.txt
ex1/src/: main.cpp  src
ex2-cmake/: README.md
ex2-cmake/src/: CMakeLists.txt
